@@ -423,7 +423,7 @@ si_load_source(cl_object source, cl_object verbose, cl_object print)
 		/* INV: if "source" is not a valid stream, file.d will complain */
 		strm = source;
 	} else {
-		strm = ecl_open_stream(source, smm_input, Cnil, Cnil, 8, 1, 1);
+		strm = ecl_open_stream(source, smm_input, Cnil, Cnil, 8, 1);
 		if (Null(strm))
 			@(return Cnil)
 	}
